--- a/python_bindings/notebooks/search_generic_sparse_jaccard.ipynb
+++ b/python_bindings/notebooks/search_generic_sparse_jaccard.ipynb
@@ -12,7 +12,9 @@
     "import time \n",
     "import math \n",
     "from scipy.sparse import csr_matrix \n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split \n",
+    "print(sys.version)\n",
+    "print(\"NMSLIB version:\", nmslib.__version__)\n"
    ]
   },
   {
@@ -411,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8"
   }
  },
  "nbformat": 4,
