--- a/python_bindings/notebooks/search_sift_uint8.ipynb
+++ b/python_bindings/notebooks/search_sift_uint8.ipynb
@@ -12,7 +12,9 @@
     "import time \n",
     "import math \n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "print(sys.version)\n",
+    "print(\"NMSLIB version:\", nmslib.__version__)\n"
    ]
   },
   {
@@ -351,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8"
   }
  },
  "nbformat": 4,
