--- a/python_bindings/notebooks/search_sparse_cosine.ipynb
+++ b/python_bindings/notebooks/search_sparse_cosine.ipynb
@@ -13,7 +13,9 @@
     "import math \n",
     "from scipy.sparse import csr_matrix \n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "print(sys.version)\n",
+    "print(\"NMSLIB version:\", nmslib.__version__)\n"
    ]
   },
   {
@@ -415,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8"
   }
  },
  "nbformat": 4,
